--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.9.4",
     "core-js": "^3.6.5",
+    "firebase": "^8.1.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
